istioctl/cmd/testdata/ingress/another-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: istio
  name: another-ingress
  namespace: another-namespace
spec:
  rules:
    - http:
        paths:
          - path: /foo/bar/
            backend:
              serviceName: anotherservice-service
              servicePort: 7080
