istioctl/cmd/testdata/ingress/myservice-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: istio
  name: simple-ingress
  namespace: default
spec:
  rules:
    - http:
        paths:
          - path: /foo/.*
            backend:
              serviceName: myservice-service
              servicePort: 9080
          - path: /.*
            backend:
              serviceName: my-ui
              servicePort: 80
